Fixed: now showes menu on tablets without hamburger

--- a/styles/style.css
+++ b/styles/style.css
@@ -386,43 +386,12 @@ ul li:hover a {
   }
 }
 
-@media screen and (max-width: 1100px) {
-  .fa-solid {
-    display: block;
-  }
+@media screen and (max-width: 1200px) {
 
-  .page-header__header-nav {
-    position: fixed;
-    margin-left: 70%;
-    top: 0;
-    right: -60vw;
-    backdrop-filter: blur(8.2px);
-    -webkit-backdrop-filter: blur(8.2px);
-    width: 60vw;
-    height: 100vh;
-    padding: 50px;
-    text-align: center;
-    z-index: 1;
-    transition: var(--transition);
-  }
-  .page-header__header-nav ul {
-    display: flex;
-    flex-direction: column;
-    margin-top: 80%;
-  }
-  #back_menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.2);
-    display: none;
-  }
 
   .static-container {
     display: flex;
-    flex-direction: column;
+    padding: 10%;
     justify-content: center;
     align-items: center;
   }
@@ -452,7 +421,7 @@ ul li:hover a {
     width: 140px;
   }
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
   .page-header__logo {
     width: 30%;
   }
